Fix about page logo on mobile medium

--- a/static/sass/_responsive-mobile-large-max.scss
+++ b/static/sass/_responsive-mobile-large-max.scss
@@ -15,6 +15,7 @@
     .container.about {
       font-size: .9em;
       .media {
+        height: 80px;
         .hero {
           background-repeat: no-repeat;
           background-position: center;
